front end bug fixes on mobile

--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -169,7 +169,11 @@
 }
 
 #dev-h1{
-	font-size: 3em;
+	font-size: 2.5em;
+}
+
+.mob{
+	padding: 0 25px 35px;
 }
 
 
